--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 
 <body>
@@ -22,10 +23,14 @@
                 <div class="converter">
                     <div class="curr-form">
                         <input type="number" class="value-input">
-                        <select class="curr-sect" name="" id="">
-                            <option value="">Mexican Peso</option>
-                            <option value="">Nigerian naira</option>
-                        </select>
+                        <div class="select">
+                            <select class="curr-select" name="" id="">
+                                <option value="">Mexican Peso</option>
+                                <option value="">Nigerian naira</option>
+                                <option value="">United States Dollars</option>
+                            </select>
+                            <i class="fas fa-caret-down"></i>
+                        </div>
                     </div>
                     <div class="curr-form">
                         <input type="number" class="value-input">
