feat: installed url-loader for webpack, select element background image shows, ui complete.

--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,17 @@
                                 <option value="">Nigerian naira</option>
                                 <option value="">United States Dollars</option>
                             </select>
-                            <i class="fas fa-caret-down"></i>
                         </div>
                     </div>
                     <div class="curr-form">
                         <input type="number" class="value-input">
-                        <select class="curr-sect" name="" id="">
-                            <option value="">Mexican Peso</option>
-                            <option value="">Nigerian naira</option>
-                        </select>
+                        <div class="select">
+                            <select class="curr-select" name="" id="">
+                                <option value="">Mexican Peso</option>
+                                <option value="">Nigerian naira</option>
+                                <option value="">United States Dollars</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
                 <div class="graph"></div>
